--- a/pageParser/templates/index.html
+++ b/pageParser/templates/index.html
@@ -7,14 +7,15 @@
           <br/><br/><br/><br/><br/><br/><br/><br/><br/>
             <div class="row justify-content-center">
                 <div class="col-12 col-md-10 col-lg-8">
-                    <form class="card card-sm">
+                    <form method="post" class="card card-sm">
+                        {% csrf_token %}
                         <div class="card-body row no-gutters align-items-center">
                             <div class="col-auto">
                                 <i class="fas fa-search h4 text-body"></i>
                             </div>
                             <!--end of col-->
                             <div class="col">
-                                <input class="form-control form-control-lg form-control-borderless" type="search" placeholder="Input a website">
+                                <input name="website" class="form-control form-control-lg form-control-borderless" type="search" placeholder="Input a website">
                             </div>
                             <!--end of col-->
                             <div class="col-auto">
@@ -24,6 +25,10 @@
                         </div>
                     </form>
                 </div>
+                {% if website %}
+                    {% include "statistic.html" %}
+                {% endif %}
+
                 <!--end of col-->
     </div>
         </div>
