--- a/pageParser/templates/wrapper.html
+++ b/pageParser/templates/wrapper.html
@@ -13,6 +13,7 @@
     <!-- Bootstrap core CSS -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/dt-1.10.18/datatables.min.css"/>
     <link rel="stylesheet" href="{% static 'css/search.css' %}"/>
   </head>
 
@@ -21,7 +22,7 @@
     <header>
       <!-- Fixed navbar -->
       <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="#">Tag Counter</a>
+        <a class="navbar-brand" href="/">Tag Counter</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -41,7 +42,19 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"/>
+    <script src="https://cdn.datatables.net/1.10.19/js/dataTables.bootstrap4.min.js"/>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-    <script src="{% static 'js/bootstrap.min.js' %}></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+      <script>
+        $(document).ready(function () {
+            $('#tag_stat').DataTable();
+            var website = $('input[name=website]');
+            if (website.val() == '') {
+                website.val('http://epam.com')
+            }
+        });
+    </script>
+
   </body>
 </html>
