--- a/pageParser/templates/statistic.html
+++ b/pageParser/templates/statistic.html
@@ -4,7 +4,8 @@
     <main role="main" class="container">
       <div class="container">
           <br/><br/><br/><br/><br/><br/><br/><br/><br/>
-          <table class="table table-bordered">
+          <h2>Statistic for {{ website }}</h2>
+          <table id="tag_stat" class="table table-bordered">
               <thead>
                 <tr>
                   <th scope="col">Tag</th>
@@ -12,15 +13,16 @@
                 </tr>
               </thead>
               <tbody>
-                <tr>
-                  <th scope="row">1</th>
-                  <td>Mark</td>
-                </tr>
+                {% for tag, number in tag_statistic.items %}
+                    <tr>
+                      <th scope="row">{{ tag }}</th>
+                      <td>{{ number }}</td>
+                    </tr>
+                {% endfor %}
               </tbody>
             </table>
       </div>
     </main>
-
 {% endblock %}
 
 
